WebRoot/skins/ttt/ttt.css
/*
 * ***** BEGIN LICENSE BLOCK *****
 * Version: ZPL 1.2
 * 
 * The contents of this file are subject to the Zimbra Public License
 * Version 1.2 ("License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 * http://www.zimbra.com/license
 * 
 * Software distributed under the License is distributed on an "AS IS"
 * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
 * the License for the specific language governing rights and limitations
 * under the License.
 * 
 * The Original Code is: Zimbra Collaboration Suite Web Client
 * 
 * The Initial Developer of the Original Code is Zimbra, Inc.
 * Portions created by Zimbra are Copyright (C) 2006 Zimbra, Inc.
 * All Rights Reserved.
 * 
 * Contributor(s):
 * 
 * ***** END LICENSE BLOCK *****
 */


body						{	@ChromeBg@	}

/* classes for the skin around the various pieces of the app */

.skin_container						{	position:relative;	overflow:hidden;	}
.skin_table							{	width:100%;	height:100%;	
										border-collapse:collapse; 
										table-layout:fixed; /* NOTE: removing so skin resizing via sash will work */
}	




#skin_outer							{	Xdisplay:none; 	@SkinOuter@			}
#skin_table_outer					{				}
	/*	 all columns are sized with the following classes	*/
	#skin_col_tree					{	width:170px;										}
	#skin_col_tree_app_sash			{	width:8px;											}
	#skin_col_main					{	width:auto;											}
	#skin_col_quota					{	width:180px;										}


/* top row:  logo, search box, quota */
#skin_tr_top							{		}
#skin_td_logo							{	text-align:center; vertical-align:middle;			}
#skin_border_logo						{	@SkinBorderLogo@		}
#skin_container_logo					{	
    height:30;
}


#skin_td_search							{	padding:8 0 5 0;		}
#skin_border_search						{	@SkinBorderSearch@		}
#skin_container_search					{	
	height:20;		margin:4 5 3 5;	
#IFDEF MSIE
	height:26;		
#ENDIF
#IFDEF SAFARI
	height:24;		margin:0 5 3 5;
#ENDIF
}


#skin_td_quota							{	text-align:right;		}
#skin_border_quota						{	@SkinBorderQuota@		}
#skin_container_quota					{	
	height:30;		margin: -2 5 0 10;  
}


/* search builder */

#skin_border_outer						{							}

#skin_border_search_builder_toolbar		{	@SkinBorderSBToolbar@	}
#skin_container_search_builder_toolbar	{	
	height:24;		margin:0 2 0 5;	
#IFDEF MSIE
	height:25;		margin:2 4 0 0;	
#ENDIF
#IFDEF SAFARI
	height:22;		margin:2 2 0 2;	
#ENDIF
}

#skin_tr_search_builder					{							}
#skin_td_search_builder					{	padding:0 4 3 4;		}
#skin_border_search_builder				{	@SkinBorderSB@			}
#skin_container_search_builder			{	
	height:225;		margin:0 5 0 4;
#IFDEF MSIE
					margin:0 4 0 -6;	
#ENDIF
#IFDEF SAFARI
					margin:0 0 0 0;	
#ENDIF
}



/* current app, tree-app sash, top toolbar */
#skin_tr_toolbar						{		}
#skin_td_current_app					{	padding:0 0 0 4; 		}
#skin_border_current_app				{	@SkinBorderCurrentApp@	}
#skin_container_current_app				{	
	height:22;	 	margin:4 2 0 5;
#IFDEF MSIE
	height:24;		margin:0 4 0 0;
#ENDIF
#IFDEF SAFARI
	height:24;		margin:-1 2 0 5;
#ENDIF
}


#skin_td_tree_app_sash					{	text-align:center; vertical-align:middle;		}
#skin_border_tree_app_sash				{	@SkinBorderTreeSash@ 	}
#skin_container_tree_app_sash			{							}

#skin_td_app_top_toolbar				{	padding:0 6 0 0;	margin-bottom:-1px;	}
#skin_border_app_top_toolbar			{	@SkinBorderAppToolbar@	}
#skin_container_app_top_toolbar			{	
	height:22;		margin:4 2 0 5;	
#IFDEF MSIE
	height:25;		margin:0 0 0 1;
#ENDIF
#IFDEF SAFARI
	height:26;		margin:0 0 0 0;
#ENDIF
}



/* app chooser, tree, app main */

#skin_tr_main							{	height:100%;			}

#skin_td_app_chooser					{	padding:0 4 0 8; vertical-align:bottom; text-align:center;	}
#skin_border_app_chooser				{	@SkinBorderAppChooser@	}
#skin_container_app_chooser				{	
	height:100%;
#IFDEF MSIE
	margin:4 0 0 0;
#ENDIF
}

#skin_tr_tree							{	height:100%;			}
#skin_td_tree							{	
	height:100%;
	padding-left:4px;
	padding-bottom:2px;
}
#skin_border_tree						{	@SkinBorderTree@	height:100%;	}
#skin_container_tree					{	
	height:100%;	margin:0 -4 2 4; 
#IFDEF MSIE
					margin:0 -2 2 2;
#ENDIF
#IFDEF SAFARI
					margin:0 0 -2 0;
#ENDIF
}


#skin_tr_tree_footer					{	Xdisplay:none;			}
#skin_td_tree_footer					{	
	vertical-align:top;
	padding-left:4px;
}
#skin_border_tree_footer				{	@SkinBorderMiniCal@		}

#skin_container_tree_footer				{	
	height:135;		margin:2 -4 0 4;  
#IFDEF MSIE
					margin:0 0 0 0;
#ENDIF
#IFDEF SAFARI
					margin:0 0 0 0;
#ENDIF
}



#skin_td_app_main						{	
	padding:0 6 7 0;	 
#IFDEF MSIE
	padding:0 6 4 0;
#ENDIF
}
#skin_border_app_main					{	@SkinBorderApp@		height:100%;		}
#skin_container_app_main				{	
	height:100%;	margin:0 -4 -3 4;	
#IFDEF MSIE
					margin:0 -2 0 1;
#ENDIF
#IFDEF SAFARI
	height:100%; 	margin:0 0 0 0;
#ENDIF
}




/* status box */

#skin_tr_status	{	}
#skin_td_status {	
		padding:5 0 5 4;
}
#skin_border_status 					{	@SkinBorderStatus@		}
#skin_container_status					{	
		height:30;		margin:8 -4 0 8;
#IFDEF MSIE
						margin:15 0 0 0;
#ENDIF
}

.AppSash-vert {
	height:11px;
}


/* Hack the AppChiclets to do them with CSS instead of images */
.ImgAppChiclet, 
.ImgAppChicletHover,						
.ImgAppChicletSel {	
		position:relative; 		
		width:16px; height:16px; margin:0 1 0 0;	padding:2px 4px 2px 4px;
#IFDEF MSIE
		width:24px; height:20px; margin:0 1 0 0;	padding:2px 4px 2px 4px;
#ENDIF
}
.ImgAppChiclet							{	@AppTabContainer@			}
.ImgAppChicletHover						{	@AppTabContainer-hover@		}
.ImgAppChicletSel						{	@AppTabContainer-selected@	}


.ImgAppChiclet							{				}



#IFNDEF MSIE
	.ImgAppBanner{background-image:url("@AppBannerImg@");width:@AppBannerWidth@;height:@AppBannerHeight@;}
	.ImgLoginBanner{background-image:url("@LoginBannerImg@");width:@LoginBannerWidth@;height:@LoginBannerHeight@;}	
#ENDIF
#IFDEF MSIE
	.ImgAppBanner{filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='@AppBannerImg@',sizingMethod='scale');width:@AppBannerWidth@;height:@AppBannerHeight@;}
	.ImgLoginBanner{filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='@LoginBannerImg@',sizingMethod='scale');width:@LoginBannerWidth@;height:@LoginBannerHeight@;}
#ENDIF


/* Specify the width of sidebar ads when using a skin with ads */
.skin_sidebar_ad	{
	width:@SidebarAdWidth@;
}

